@@ -22,14 +22,19 @@
 #  	reset = 10h (reset every 10 hours)
 #  	reset = 12  (reset every 12 days)
 #
+#  The 'reset_day' parameter defines which month day should
+#  reset the 'monthly' counter.
+#
 #  The 'key' parameter specifies the unique identifier for the
 #  counter records (usually 'User-Name').
 #
 #  The 'query' parameter specifies the SQL query used to get
 #  the current Counter value from the database. There are 2
 #  parameters that can be used in the query:
+#
 #		%%b	unix time value of beginning of reset period
 #		%%e	unix time value of end of reset period
+#		%%r	configured reset day.
 #
 #  The 'check_name' parameter is the name of the 'check'
 #  attribute to use to access the counter in the 'users' file
